--- a/src/KKS_Screencap/packages.config
+++ b/src/KKS_Screencap/packages.config
@@ -12,4 +12,5 @@
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.ScreenCaptureModule" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.TextRenderingModule" version="2019.4.9" targetFramework="net46" />
+  <package id="Microsoft.Unity.Analyzers" version="1.10.2" targetFramework="net46" developmentDependency="true" />
 </packages>
