--- a/src/EC_ConfigurationManager/packages.config
+++ b/src/EC_ConfigurationManager/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="BepInEx.Analyzers" version="1.0.4" targetFramework="net46" developmentDependency="true" />
   <package id="BepInEx.ConfigurationManager" version="16.3.0" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net46" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.Assembly-CSharp" version="2019.6.6.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.IL" version="2019.6.6.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.TextMeshPro" version="2019.6.6.4" targetFramework="net46" developmentDependency="true" />
