--- a/src/HS2_Sideloader/packages.config
+++ b/src/HS2_Sideloader/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BepInEx.Analyzers" version="1.0.4" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net46" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.Assembly-CSharp" version="2020.5.29.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.Assembly-CSharp-firstpass" version="2020.5.29.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.IL" version="2020.5.29.4" targetFramework="net46" developmentDependency="true" />
@@ -10,9 +10,9 @@
   <package id="IllusionLibs.HoneySelect2.UnityEngine.AudioModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.ImageConversionModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.HoneySelect2.UnityEngine.IMGUIModule" version="2018.4.11.4" targetFramework="net46" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.IMGUIModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.10.2" targetFramework="net46" developmentDependency="true" />
-  <package id="SharpZipLib" version="1.3.2" targetFramework="net46" />
-  <package id="XUnity.Common" version="1.0.0" targetFramework="net46" />
-  <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net46" />
+  <package id="SharpZipLib" version="1.3.2" targetFramework="net46" developmentDependency="true" />
+  <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net46" developmentDependency="true" />
 </packages>
