--- a/src/KK_Sideloader/packages.config
+++ b/src/KK_Sideloader/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BepInEx.Analyzers" version="1.0.4" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net35" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net35" />
+  <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.3.2" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.Koikatu.Assembly-CSharp" version="2019.4.27.4" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.Koikatu.Assembly-CSharp-firstpass" version="2019.4.27.4" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.Koikatu.UnityEngine" version="5.6.2.4" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.Koikatu.UnityEngine.UI" version="5.6.2.4" targetFramework="net35" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.10.2" targetFramework="net35" developmentDependency="true" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net35" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net35" developmentDependency="true" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net35" developmentDependency="true" />
   <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net35" developmentDependency="true" />
 </packages>
