--- a/src/EC_ExtensibleSaveFormat_Patcher/EC_ExtensibleSaveFormat_Patcher.csproj
+++ b/src/EC_ExtensibleSaveFormat_Patcher/EC_ExtensibleSaveFormat_Patcher.csproj
@@ -61,9 +61,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\EC_ExtensibleSaveFormat\EC_ExtensibleSaveFormat.csproj">
       <Project>{747a4e61-34f4-4790-a418-bb2cb03450e3}</Project>
       <Name>EC_ExtensibleSaveFormat</Name>
@@ -72,6 +69,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="..\Core_ExtensibleSaveFormat_Patcher\Core_ExtensibleSaveFormat_Patcher.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
