--- a/src/HS2_ExtensibleSaveFormat_Patcher/HS2_ExtensibleSaveFormat_Patcher.csproj
+++ b/src/HS2_ExtensibleSaveFormat_Patcher/HS2_ExtensibleSaveFormat_Patcher.csproj
@@ -70,6 +70,7 @@
     <ProjectReference Include="..\HS2_ExtensibleSaveFormat\HS2_ExtensibleSaveFormat.csproj">
       <Project>{b9eabbb2-4a92-4672-9b5a-658fdf8ace3f}</Project>
       <Name>HS2_ExtensibleSaveFormat</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="..\Core_ExtensibleSaveFormat_Patcher\Core_ExtensibleSaveFormat_Patcher.projitems" Label="Shared" />
