--- a/src/AI_BGMLoader/packages.config
+++ b/src/AI_BGMLoader/packages.config
@@ -7,7 +7,8 @@
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.UnityWebRequestWWWModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.4.8" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx" version="5.4.15" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.5.4" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.10.2" targetFramework="net46" developmentDependency="true" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net46" developmentDependency="true" />
