--- a/src/EC_ExtensibleSaveFormat_Patcher/packages.config
+++ b/src/EC_ExtensibleSaveFormat_Patcher/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="IllusionLibs.BepInEx" version="5.4.4" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx" version="5.4.15" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.5.4" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Mono.Cecil" version="0.10.4.1" targetFramework="net46" developmentDependency="true" />
 </packages>
