Generate xmldocs for ec and kk/kks screencap

--- a/src/EC_Screencap/EC_Screencap.csproj
+++ b/src/EC_Screencap/EC_Screencap.csproj
@@ -33,6 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>..\..\bin\BepInEx\plugins\EC_BepisPlugins\EC_Screencap.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.5.4.0, Culture=neutral, processorArchitecture=MSIL">
