--- a/src/KKS_ExtensibleSaveFormat/KKS_ExtensibleSaveFormat.csproj
+++ b/src/KKS_ExtensibleSaveFormat/KKS_ExtensibleSaveFormat.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugSymbols>true</DebugSymbols>
+    <DocumentationFile>..\..\bin\BepInEx\plugins\KKS_BepisPlugins\KKS_ExtensibleSaveFormat.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.5.4.0, Culture=neutral, processorArchitecture=MSIL">
