Added ext data support for KKS game save files

--- a/src/KKS_ExtensibleSaveFormat/KKS_ExtensibleSaveFormat.csproj
+++ b/src/KKS_ExtensibleSaveFormat/KKS_ExtensibleSaveFormat.csproj
@@ -83,6 +83,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KKS.ExtendedSave.SaveData.cs" />
+    <Compile Include="KKS.ExtendedSave.SaveData.Hooks.cs" />
     <Compile Include="KKS.ExtendedSave.Events.cs" />
     <Compile Include="KKS.ExtendedSave.Hooks.cs" />
     <Compile Include="KKS.ExtendedSave.cs" />
