--- a/src/KKS_Sideloader/packages.config
+++ b/src/KKS_Sideloader/packages.config
@@ -10,6 +10,7 @@
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.ImageConversionModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.IMGUIModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.UI" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.XUnity.ResourceRedirector" version="4.18.0" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.11.0" targetFramework="net46" developmentDependency="true" />
   <package id="SharpZipLib" version="1.3.2" targetFramework="net46" developmentDependency="true" />
