--- a/src/KKS_Screencap/packages.config
+++ b/src/KKS_Screencap/packages.config
@@ -3,6 +3,7 @@
   <package id="IllusionLibs.BepInEx" version="5.4.15" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.5.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp" version="2021.8.27.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp-firstpass" version="2021.8.27.2" targetFramework="net46" />
   <package id="IllusionLibs.KoikatsuSunshine.Unity.Postprocessing.Runtime" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.AssetBundleModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.AudioModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
