--- a/src/KKS_Screencap/KKS_Screencap.csproj
+++ b/src/KKS_Screencap/KKS_Screencap.csproj
@@ -108,6 +108,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KKS.ScreenshotManagerHooks.cs" />
     <Compile Include="KKS.ScreenshotManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
