Add rgAlpha to screencap (partially working)

--- a/src/KKS_Screencap/KKS_Screencap.csproj
+++ b/src/KKS_Screencap/KKS_Screencap.csproj
@@ -121,6 +121,7 @@
     <None Include="packages.config" />
     <None Include="Resources\blackout.unity3d" />
     <None Include="Resources\EquirectangularConverter.unity3d" />
+    <None Include="Resources\rgalpha.unity3d" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
