--- a/src/KKS_Screencap/packages.config
+++ b/src/KKS_Screencap/packages.config
@@ -13,5 +13,6 @@
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.ScreenCaptureModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.TextRenderingModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.UI" version="2019.4.9" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.11.0" targetFramework="net46" developmentDependency="true" />
 </packages>
